--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bleach==2.1.1
+cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
 html5lib==1.0b10
@@ -11,6 +12,7 @@ jsonschema==2.6.0
 jupyter-client==5.1.0
 jupyter-core==4.3.0
 MarkupSafe==1.0
+matplotlib==2.1.0
 mistune==0.7.4
 nbconvert==5.3.1
 nbformat==4.4.0
@@ -25,6 +27,7 @@ pkg-resources==0.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.2
 pyzmq==16.0.2
